syntax = "proto3";

service Journal {
    rpc Publish(JournalRequest) returns (JournalResponse);
    rpc UnPublish(JournalRequest) returns (JournalResponse);
    rpc Approve(JournalApproveRequest) returns (JournalResponse);
    rpc Destroy(JournalRequest) returns (JournalResponse);
}

message JournalRequest {
    int64 id = 1;
    int32 status = 2;
}

message JournalApproveRequest {
    int64 id = 1;
    int64 approved_by = 2;
    int32 status = 3;
}

message JournalResponse {
    string flag = 1;
    string message = 2;
}


